All changes for the launch